crates/vite_task_bin/tests/e2e_snapshots/fixtures/interleaved-stdio/snapshots/multiple tasks, cache hit, replayed.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run -r check-tty-cached
~/packages/other$ vtt check-tty
stdin:not-tty
stdout:not-tty
stderr:not-tty

$ vtt check-tty
stdin:not-tty
stdout:not-tty
stderr:not-tty

---
vt run: 0/2 cache hit (0%). (Run `vt run --last-details` for full details)
> vt run -r check-tty-cached
~/packages/other$ vtt check-tty ◉ cache hit, replaying
stdin:not-tty
stdout:not-tty
stderr:not-tty

$ vtt check-tty ◉ cache hit, replaying
stdin:not-tty
stdout:not-tty
stderr:not-tty

---
vt run: 2/2 cache hit (100%), <duration> saved. (Run `vt run --last-details` for full details)
