crates/vite_task_bin/tests/e2e_snapshots/fixtures/interleaved-stdio/snapshots/multiple tasks, cache off, inherit stdio.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run -r check-tty
~/packages/other$ vtt check-tty
stdin:not-tty
stdout:not-tty
stderr:not-tty

$ vtt check-tty ⊘ cache disabled
stdin:tty
stdout:tty
stderr:tty

---
vt run: 0/2 cache hit (0%). (Run `vt run --last-details` for full details)
