crates/vite_task_bin/tests/e2e_snapshots/fixtures/interleaved-stdio/snapshots/single task, cache hit, replayed.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run check-tty-cached
$ vtt check-tty
stdin:not-tty
stdout:not-tty
stderr:not-tty
> vt run check-tty-cached
$ vtt check-tty ◉ cache hit, replaying
stdin:not-tty
stdout:not-tty
stderr:not-tty

---
vt run: cache hit, <duration> saved.
