crates/vite_task_bin/tests/e2e_snapshots/fixtures/interleaved-stdio/snapshots/single task, cache off, inherits stdio.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run check-tty
$ vtt check-tty ⊘ cache disabled
stdin:tty
stdout:tty
stderr:tty
